--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
+    "babel-plugin-styled-components": "^2.0.6",
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.9.0",
     "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gatsby-cloud": "^4.9.0",
     "gatsby-plugin-google-analytics": "^4.9.0",
     "gatsby-plugin-image": "^2.9.0",
     "gatsby-plugin-manifest": "^4.9.0",
+    "gatsby-plugin-netlify-cms": "^6.9.0",
     "gatsby-plugin-offline": "^5.9.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sass": "^5.9.0",
     "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-plugin-styled-components": "^5.9.0",
     "gatsby-remark-copy-linked-files": "^5.9.0",
     "gatsby-remark-images": "^6.9.0",
     "gatsby-remark-prismjs": "^6.9.0",
@@ -25,10 +32,14 @@
     "gatsby-source-filesystem": "^4.9.0",
     "gatsby-transformer-remark": "^5.9.0",
     "gatsby-transformer-sharp": "^4.9.0",
+    "netlify-cms-app": "^2.15.67",
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "sass": "^1.49.9",
+    "styled-components": "^5.3.3",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
   },
