Updates for mobile support and gets background working

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-yml": "^0.14.0",
     "prettier": "^2.5.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
