Finishing touches on home page and gallery page

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-helmet": "^6.1.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
+    "swiper": "^8.1.4",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
   },
