--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,11 +24,32 @@ collections:
               - { label: Name, name: name, widget: string }
               - { label: Position, name: position, widget: string }
               - { label: Photo, name: photo, widget: image }
+      - label: "Home"
+        name: "home"
+        file: "content/home/index.md"
+        fields:
+          - { label: Title, name: title, widget: string, required: false }
+          - { label: Current Location, name: currentLocation, widget: string }
+          - {
+              label: Current Location Map Image,
+              name: currentMapImage,
+              widget: image,
+              required: false,
+            }
+          - label: Trip Details
+            name: tripDetails
+            widget: list
+            fields:
+              - { label: Title, name: title, widget: string }
+              - { label: Number, name: number, widget: string }
+          - label: Gallery Images
+            name: galleryImages
+            widget: image
   - name: "articles"
     label: "Articles"
     folder: "content/articles"
     create: true
-    slug: "/articles/{{title}}"
+    slug: "{{title}}"
     media_folder: ""
     public_folder: ""
     path: "{{title}}/index"
@@ -69,14 +90,111 @@ collections:
             ],
         }
       - { label: "Images", name: "images", widget: "image", required: false }
+  - name: "stops"
+    label: "Stops"
+    folder: "content/stops"
+    editor: { preview: false }
+    slug: "{{title}}"
+    create: true
+    path: "{{title}}/index"
+    fields:
+      - label: "Stop"
+        name: "stop"
+        widget: "list"
+        fields:
+          - { label: "Location / Name", name: "location", widget: "string" }
+          - label: "Daily Log"
+            name: "dailyLog"
+            widget: "list"
+            fields:
+              - { label: "Day # / Title", name: "title", widget: "string" }
+              - { label: "Date", name: "date", widget: "date" }
+              - { label: "Content", name: "content", widget: "markdown" }
+              - {
+                  label: "Cover Image",
+                  name: "coverImage",
+                  widget: "image",
+                  required: false,
+                }
+          - label: "Hiking"
+            name: "hiking"
+            widget: "list"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - {
+                  label: "Subtitle",
+                  name: "subtitle",
+                  widget: "string",
+                  required: false,
+                }
+              - { label: "Content", name: "content", widget: "markdown" }
+              - {
+                  label: "Cover Image",
+                  name: "coverImage",
+                  widget: "image",
+                  required: false,
+                }
+          - label: "Golfing"
+            name: "golfing"
+            widget: "list"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - {
+                  label: "Subtitle",
+                  name: "subtitle",
+                  widget: "string",
+                  required: false,
+                }
+              - { label: "Content", name: "content", widget: "markdown" }
+              - {
+                  label: "Cover Image",
+                  name: "coverImage",
+                  widget: "image",
+                  required: false,
+                }
+          - label: "Lodging"
+            name: "lodging"
+            widget: "list"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - {
+                  label: "Subtitle",
+                  name: "subtitle",
+                  widget: "string",
+                  required: false,
+                }
+              - { label: "Content", name: "content", widget: "markdown" }
+              - {
+                  label: "Cover Image",
+                  name: "coverImage",
+                  widget: "image",
+                  required: false,
+                }
+          - label: "Dining"
+            name: "dining"
+            widget: "list"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - {
+                  label: "Subtitle",
+                  name: "subtitle",
+                  widget: "string",
+                  required: false,
+                }
+              - { label: "Content", name: "content", widget: "markdown" }
+              - {
+                  label: "Cover Image",
+                  name: "coverImage",
+                  widget: "image",
+                  required: false,
+                }
   - name: "trips"
     label: "Trips"
     folder: "content/trips"
     editor: { preview: false }
-    slug: "/trips/{{title}}"
+    slug: "{{title}}"
     create: true
     path: "{{title}}/index"
-    preview: false
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Start Date", name: "startDate", widget: "date" }
