--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-source-filesystem": "^4.9.0",
     "gatsby-transformer-remark": "^5.9.0",
     "gatsby-transformer-sharp": "^4.9.0",
+    "moment": "^2.29.3",
     "netlify-cms-app": "^2.15.67",
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
