--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-transformer-sharp": "^4.9.0",
     "moment": "^2.29.3",
     "netlify-cms-app": "^2.15.67",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.2.0",
