Fixes build errors... again

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -166,7 +166,7 @@ collections:
             }
   - name: "pages"
     label: "Pages"
-    preview: false
+    editor: { preview: false }
     files:
       - label: "Home"
         name: "home"
