--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-images-viewer": "^1.7.1",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
     "swiper": "^8.1.4",
